# AiDetectPlugin

./: .gitignore  README.md  build.gradle  settings.gradle
dcloud-uniplugin-stubs/: build.gradle
dcloud-uniplugin-stubs/src/main/java/io/dcloud/feature/uniapp/: UniSDKInstance.java
dcloud-uniplugin-stubs/src/main/java/io/dcloud/feature/uniapp/bridge/: UniJSCallback.java
dcloud-uniplugin-stubs/src/main/java/io/dcloud/feature/uniapp/common/: UniModule.java
gradle/wrapper/: gradle-wrapper.properties
nativeplugins/AiDetectPlugin/android/: AiDetectPlugin-release.aar
nativeplugins/AiDetectPlugin/android-src/: build.gradle
nativeplugins/AiDetectPlugin/android-src/src/main/assets/models/quality/resnet18_fuzzy_ncnn/: labels.txt  resnet18_fuzzy.param
nativeplugins/AiDetectPlugin/android-src/src/main/assets/models/quality/resnet18_remake_ncnn/: labels.txt
nativeplugins/AiDetectPlugin/android-src/src/main/assets/models/yolov8n_ncnn/: yolov8n.param
nativeplugins/AiDetectPlugin/android-src/src/main/cpp/: CMakeLists.txt  yolo_ncnn_jni.cpp
nativeplugins/AiDetectPlugin/android-src/src/main/java/com/example/aidetect/: AiDetectPlugin.java  AssetModelPathUtils.java  ClassificationScore.java  CoordinateUtils.java  DefaultQualityModelConfig.java  DetectActivity.java  NmsUtils.java  (+22 more)
pages/detect/: detect.vue
releases/: CHANGELOG.md
releases/AiDetectPlugin-v1.0.0/: package.json
releases/AiDetectPlugin-v1.0.0/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.1.0/: package.json
releases/AiDetectPlugin-v1.1.1/: package.json
releases/AiDetectPlugin-v1.1.1/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.1.2/: package.json
releases/AiDetectPlugin-v1.1.2/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.2.0/: package.json
releases/AiDetectPlugin-v1.2.0/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.2.1/: package.json
releases/AiDetectPlugin-v1.2.1/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.2.2/: package.json
releases/AiDetectPlugin-v1.2.3/: package.json
releases/AiDetectPlugin-v1.2.3/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.2.4/android/: AiDetectPlugin-release.aar
releases/AiDetectPlugin-v1.3.0/: package.json
